--- a/.env.sample
+++ b/.env.sample
@@ -13,4 +13,4 @@ CORS_ORIGIN=
 
 # JWT
 ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_TIME=   # sekundlarda hisoblanadi. misol: 900 (15 min)
+ACCESS_TOKEN_TIME=  
